--- a/style.css
+++ b/style.css
@@ -148,3 +148,62 @@ p {
   box-sizing: border-box;
 }
 
+@media (max-width: 600px) {
+  .bikcraft {
+    max-width: 100%;
+    display: block;
+    margin-bottom: 50px;
+   margin-left: 128px;
+  }
+ 
+
+  .header {
+    display: grid;
+  gap: 20px;
+  justify-items:left;
+  }
+  .conteudo {
+   
+      display: grid;
+      grid-template-columns: 1fr;
+      justify-items: center;
+     
+  }
+  .introducao {
+    text-align: left;
+    justify-items: center;
+  }
+ 
+  .subtitulo {
+    font-size: 2rem;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.2);
+  text-align: right;
+  padding:50px;
+  align-self: center;
+  text-align: center;
+  background-image: url('./img/onda.svg');
+  }
+
+  .menu a {
+    display: block;
+    background: #ffffff;
+    padding: 1rem 2rem;
+    border-radius: 4px;
+    color: #000000;
+    text-transform: uppercase;
+    border: 2px solid #fff;
+  }
+  .introducao::before {
+    content: '';
+    width: 60px;
+    height: 4px;
+    background: #e21;
+    position: absolute;
+    top: 347px;
+    right: 165px;
+  
+  }
+  
+  
+}
